--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,18 @@
 History
 
+5/5/2016
+Added. Encoded new station ids
+	Brgy. Aparicio Ibajay, Aklan - Rain2
+	Brgy. Monlaque Ibajay, Aklan - Rain2
+	Brgy. La Union San Remegio, Antique - Rain2
+	Bugo Bridge San Remegio, Antique - Water level & Rain2
+	Jordan, DA-RFU NMRDC - BSWM_Lufft
+
+04/20/2016
+Added. Heat Index/Feel for temperature
+
+--- ABOVE UPDATES ARE NOT YET UPLOADED TO PRODUCTION SERVER ---
+
 7/31/15
 Changed.Rainfall table now explicitly shows if station staus (DISABLED/NODATA)
 Changed.Rainfall table now uses common human date time format (e.g. July, 16, 2015 3:03 PM) 
@@ -8,9 +21,6 @@ Added.Installation notes for mac/linux type OSes in github repository (https://g
 
 6/15/15
 Added. 3 station device_id 1 CapSU Pillar, Iloilo and 2 Bago City
-
-
---- ABOVE UPDATES ARE NOT YET UPLOADED TO PRODUCTION SERVER ---
 
 05/14/15
 Added. Migrated the updates of bantay Panahon from development server to production server(http://dost6.info.tm/bantaypanahon/) 
